# course-materials

./: README.md
ECS 20/: README.md
ECS 36B/: README.md
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/: HW 1 Written.docx  WrittenHomeworkTemplate.docx
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/CommandLine/: Command Line Arguments.pptx
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/Files/: Files.pptx
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/Functions/: Functions.pptx
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/If/: Conditional Statements.pptx
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/Lecture Slides/: Getting Setup.pptx  How to Be Successful.pptx  The CSIF.pptx  What is Programming_.pptx
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/MultiFile/: MakeFiles.pptx
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/Recursion/linked_list/: CMakeLists.txt  linked_list.c  main.c
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/Summer2018TicTacToe/: InputValidation.c  Makefile  board.h  main.c  move.c  move.h
ECS 36B Mathew Butner/ECS 30 (ECS 32A) Mathew Butner/tic_tac_toe/: CMakeLists.txt  board.c  board.h  input_validation.h  move.c
ECS 36B/ECS 30 (ECS 36B previously) /: Syllabus.pptx
ECS 36B/ECS 30 (ECS 36B previously) /Summer2018TicTacToe/: CMakeLists.txt  InputValidation.h  board.c  win.c  win.h
ECS 36C/: README.md
ECS 50/: README.md  asm-intel.lang
ECS 50/Examples/CAssembly/: a.out
ECS 50/Study Guides/: Final Review Study Guide - Class.docx
ECS Upper Overall/: README.md
(+426 files in other folders)
